# tscrapingbot-rs

./: .env.template  .gitignore  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Cargo.toml  LICENSE  README.md
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: common-rust-steps.yaml  compile-when-release.yaml  rust-ci.yaml
.sqlx/: query-0ee3574d739fa43cfa7ba0c82852fcb314d81c83b0a19d8f964012c6f25e5b0b.json  query-141a6b43cb062c55fd9fab000e522e0a8b7d07cc3c4669785d0afe3344c6763b.json  query-b39c1ba4efda2ed743f68fdbb3ece6141d38da1d357d7e761b40a38ba9f6b604.json  query-f13e8119ffda922b7849db76e5bb166b22b49acf7f83c21079ceb212a845a962.json
migrations/: 20251230035947_create_tables.down.sql  20251230035947_create_tables.up.sql  20260105195236_get_messages_function.down.sql  20260105195236_get_messages_function.up.sql
src/: commands.rs  config.rs  handlers.rs  lib.rs  main.rs  server.rs  trace.rs
src/gemini/: mod.rs  types.rs
src/handlers/: ask.rs  dollar.rs  mod.rs  reset.rs  search.rs  start.rs  types.rs
src/handlers/utils/: chat_action_keep_alive.rs  escape_telegram_code_entities.rs  extract_user_info.rs  fetch_simplified_body.rs  format_messages_xml.rs  image.rs  mod.rs  send_reply_or_plain.rs
src/handlers/utils/llm/: analize.rs  image.rs  mod.rs
src/prompts/: mod.rs  types.rs
src/prompts/prompts/: gemini_thinking.md  html.md  preprocess.md  think_and_format.md  vision.md  web_search.md
tests/: integration_commands.rs  integration_health.rs
