[package]
name = "tscrapingbot-rs"
version = "0.1.0"
edition = "2024"

[dependencies]
axum = "0.8.4"
dotenvy = "0.15.7"
serde_json = "1.0.143"
teloxide = { version = "0.17.0", features = ["webhooks-axum", "macros"] }
thiserror = "2.0.16"
tokio = { version = "1.47.1", features = ["rt-multi-thread", "macros", "signal"] }
tracing = "0.1.41"
tracing-subscriber = { version = "0.3.20", features = ["env-filter", "fmt"] }
url = "2.5.7"
