[package]
name = "tscrapingbot-rs"
version = "0.2.1"
edition = "2024"

[profile.release]
lto = true
codegen-units = 1
panic = "abort"
strip = "symbols"

[dependencies]
axum = "0.8.4"
dotenvy = "0.15.7"
regex = "1.12.2"
reqwest = { version = "0.12.24", features = ["json", "rustls-tls"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.143"
teloxide = { version = "0.17.0", features = ["webhooks-axum", "macros"] }
thiserror = "2.0.16"
tokio = { version = "1.47.1", features = ["rt-multi-thread", "macros", "signal"] }
tracing = "0.1.41"
tracing-subscriber = { version = "0.3.20", features = ["env-filter", "fmt"] }
url = "2.5.7"

[dev-dependencies]
serial_test = "3.2.0"
teloxide_tests = "0.4.0"
tower = "0.5.2"
